--- a/Untitled Folder/style.css
+++ b/Untitled Folder/style.css
@@ -1,21 +1,59 @@
-table {
-    width: 100%;
-    border-collapse: collapse;	
+th {
+   background: #eee;
+   text-align: center;
 }
- th, td {
-    width: 10%;
-    text-align: left;
+table.dat1{
+   width: 100%;
+}
+.dat1 td{
+   height: min-content;
+    text-align: center;
     vertical-align: top;
-    border: 2px solid #000;
-    border-collapse: collapse;
+    border: 1px solid #000;
     padding: 0.3em;
     caption-side: bottom;
- }
- caption {
+}
+.dat1 td{
+   height: min-content;
+    text-align: center;
+    vertical-align: top;
+    border: 1px solid #000;
     padding: 0.3em;
-    color: #fff;
-     background: #000;
- }
- th {
-    background: #eee;
- }
+    caption-side: bottom;
+}
+.dat1 th:nth-child(2){
+   width: 150px;
+}
+.dat1 th:nth-child(3){
+   width: 100px;
+}
+.dat1 th:nth-child(6){
+   width: 150px;
+}
+.dat1 th:nth-child(7){
+   width: 150px;
+}
+.dat1 tr:nth-child(3)  {
+   border: 1px solid #000;
+}
+table.dat2{
+   margin-top: 10px;
+   width: 60%;
+ 
+}
+.dat2 td{
+   height: min-content;
+    text-align: center;
+    vertical-align: top;
+    border: 1px solid #000;
+    padding: 0.3em;
+    caption-side: bottom;
+}
+.dat2 td{
+   height: min-content;
+    text-align: center;
+    vertical-align: top;
+    border: 1px solid #000;
+    padding: 0.3em;
+    caption-side: bottom;
+}
